fixed overflow on x axis

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -6,3 +6,7 @@ html {
 body {
   margin: 0;
 }
+body,
+html {
+  overflow-x: hidden;
+}
